bug 105935 Caching of canUnload to get mac plugin bundles to work. r=peterlubczynski sr=waterson